@@ -497,6 +497,15 @@
     "debugger": "Yes (Firefox/Chrome)"
   },
   {
+    "name": "typespec",
+    "full-name": "TypeSpec",
+    "server-name": "tsp server",
+    "server-url": "https://github.com/microsoft/typespec/tree/main/packages/compiler",
+    "installation": "npm i -g @typespec/compiler",
+    "lsp-install-server": "@typespec/compiler",
+    "debugger": "Yes (Firefox/Chrome)"
+  },
+  {
     "name": "deno",
     "common-group-name": "javascript",
     "full-name": "Javascript/Typescript (deno)",
