@@ -174,6 +174,7 @@ nav:
     - TOML: page/lsp-toml.md
     - Trunk: page/lsp-trunk.md
     - TTCN3: page/lsp-ttcn3.md
+    - TypeSpec: page/lsp-typespec.md
     - V: page/lsp-v.md
     - Vala: page/lsp-vala.md
     - Verilog/SystemVerilog (hdl-checker): page/lsp-verilog.md
